<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@color/grey_300"
            android:ems="10"
            android:id="@+id/editTextTextPersonName8"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:layout_marginBottom="12dp"
            android:autofillHints=""/>
    <EditText
            android:id="@+id/displayDefinition"
            android:layout_width="297dp"
            android:layout_height="280dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:background="@color/orange_50"
            android:textStyle="normal"
            android:gravity="top|left"


            tools:ignore="LabelFor,MissingConstraints,RtlHardcoded"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginBottom="12dp" android:autofillHints=""/>
    <TextView
            android:id="@+id/textView"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/wordString"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/textView1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
    />
    <TextView
            android:id="@+id/textView2"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/meaningString"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            app:layout_constraintBottom_toTopOf="@+id/displayDefinition" android:layout_marginBottom="5dp"/>
    <Button
            android:text="@string/add"
            android:layout_width="311dp"
            android:layout_height="43dp" android:id="@+id/button"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>
    <Button
            android:text="@string/clear"
            android:layout_width="311dp"
            android:layout_height="43dp" android:id="@+id/button2"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/button1"/>
    <Button
            android:text="@string/homePage"
            android:layout_width="311dp"
            android:layout_height="43dp" android:id="@+id/button1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:layout_marginBottom="12dp"/>
    <TextView
            android:id="@+id/textView1"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/frequencyString"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@color/grey_300"
            android:ems="10"
            android:id="@+id/editTextTextPersonName3"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"/>

</androidx.constraintlayout.widget.ConstraintLayout>